# 2Long2Read

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  access_grafana.sh  ai_analyzer.py  airflow-dags-pvc-values.yaml  airflow-values.yaml  analyze_tc.sh  frontend.html  k8s-airflow-dags-pv.yaml  k8s-app.yaml  k8s-infra.yaml  k8s-prometheus-servicemonitor.yaml  k8s-rbac-airflow.yaml  k8s-spotify-dag-fixed.yaml  main.py  patch-airflow-dags.yaml  prompt.txt  pyproject.toml  requirements.txt  run_worker.sh  spotify_tc.txt  success_demo_dag.py  worker.py  worker_legacy.py
.github/workflows/: main.yml
config/: airflow-values-override.yaml  airflow-values-simple.yaml  companies_config.json  grafana_spotify_dashboard.json
dags/: cgu_analysis_dag.py  cgu_analysis_dag_simple.py  cgu_analysis_dag_working.py.backup
raw_data/: anthropic_tc.txt  spotify_tc.txt
scripts/: analyze_spotify.sh
structured_data_hybrid/: spotify_tc.json
