[project]
name = "theprojectthathelpsyoubetterunderstndhowyourdataisusedineverycompanystermsandconditionsbecausenooneverreadsthem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "fastapi>=0.119.0",
    "pika>=1.3.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "uvicorn>=0.37.0",
]
